Updates for .NET Core

--- a/src/SourceIndexServer/overview.html
+++ b/src/SourceIndexServer/overview.html
@@ -49,7 +49,7 @@
             <td class="ex">Add words separated by space to filter results to only those that contain all of the words. Can also filter by assembly name.</td>
             <td class="ex">
                 <div><a class="blueLink" href="/#q=task%20factory" target="_top">task factory</a></div>
-                <div><a class="blueLink" href="/#q=StringBuilder%20mscorlib" target="_top">StringBuilder mscorlib</a></div>
+                <div><a class="blueLink" href="/#q=StringBuilder%20System.Private.CoreLib" target="_top">StringBuilder System.Private.CoreLib</a></div>
             </td>
         </tr>
         <tr>
@@ -83,23 +83,23 @@
         </thead>
         <tr>
             <td class="ex">Link to assembly</td>
-            <td class="ex"><a class="blueLink" href="/#System.Core" target="_top">/#System.Core</a></td>
+            <td class="ex"><a class="blueLink" href="/#System.IO.FileSystem" target="_top">/#System.IO.FileSystem</a></td>
         </tr>
         <tr>
             <td class="ex">Link to file</td>
-            <td class="ex"><a class="blueLink" href="/#mscorlib/system/environment.cs" target="_top">/#mscorlib/system/environment.cs</a></td>
+            <td class="ex"><a class="blueLink" href="/#System.Private.CoreLib/system/environment.cs" target="_top">/#System.Private.CoreLib/system/environment.cs</a></td>
         </tr>
         <tr>
             <td class="ex">Link to line number</td>
-            <td class="ex"><a class="blueLink" href="/#mscorlib/system/environment.cs#56" target="_top">/#mscorlib/system/environment.cs#56</a></td>
+            <td class="ex"><a class="blueLink" href="/#System.Private.CoreLib/system/environment.cs#56" target="_top">/#System.Private.CoreLib/system/environment.cs#56</a></td>
         </tr>
         <tr>
             <td class="ex">Link to a type/member</td>
-            <td class="ex"><a class="blueLink" href="/mscorlib/a.html#1f55292c3174123d" target="_top">/mscorlib/a.html#1f55292c3174123d</a> (right-click the definition and choose Copy Shortcut)</td>
+            <td class="ex"><a class="blueLink" href="/System.Private.CoreLib/a.html#1f55292c3174123d" target="_top">/System.Private.CoreLib/a.html#1f55292c3174123d</a> (right-click the definition and choose Copy Shortcut)</td>
         </tr>
         <tr>
             <td class="ex">Link to search results</td>
-            <td class="ex"><a class="blueLink" href="/#q=Button%20PresentationFramework" target="_top">/#q=Button%20PresentationFramework</a></td>
+            <td class="ex"><a class="blueLink" href="/#q=Color%20System.Drawing.Primitives" target="_top">/#q=Color%20System.Drawing.Primitives</a></td>
         </tr>
     </table>
     <h3>Features</h3>
